--- a/scss/blocks/_site-header.scss
+++ b/scss/blocks/_site-header.scss
@@ -56,7 +56,7 @@
     background-image: url("../img/phone.svg");
     background-repeat: no-repeat;
     background-position:center center;
-    background-size: cover;
+    background-size: contain;
   }
 }
 
@@ -102,7 +102,7 @@
       background-image: url("../img/clock.svg");
       background-repeat: no-repeat;
       background-position:center center;
-      background-size: cover;
+      background-size: contain;
     }
   }
 .site-header__time-wrapper{
@@ -148,6 +148,8 @@
 .site-header__logo-min{
   display: none;
   flex-shrink: 0;
+  padding-top: 24px;
+  padding-bottom: 23px;
 
   &:hover{
     opacity: 0.8;
@@ -176,7 +178,7 @@
   font-size: 18px;
   line-height: 21px;
   margin-right: 18px;
-  margin-left: 17;
+  margin-left: 17px;
   margin-top: 24px;
   margin-bottom: 23px;
   color: #FFFFFF;
@@ -234,3 +236,46 @@
   }
 }
 
+@include breakpoint-down(811px){
+  .site-header__navbar{
+    border-radius: 0;
+  }
+  .site-header--nojs .site-header__list{
+    order: 2;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@include breakpoint-down(425px){
+  .site-header--nojs .site-header__list{
+    order: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .site-header--nojs .site-header__list-item{
+    width: 100%;
+  }
+
+  .site-header--nojs .site-header__link{
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    padding-top: 24px;
+    padding-bottom: 23px;
+    border: 2px solid #ffd600;
+    color: #ffd600;
+
+    &:active{
+      color:#0055b8;
+      background-color: #ffd600;
+    }
+  }
+
+  .site-header--nojs .site-header__socials{
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+  }
+}
