--- a/scss/blocks/_blocks-all.scss
+++ b/scss/blocks/_blocks-all.scss
@@ -1,5 +1,7 @@
 @import "visually-hidden";
 @import "container";
 @import "button";
+@import "appointment";
 @import "site-header";
 @import "hero-section";
+@import "info-section";
