--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -1,7 +1,10 @@
 .button {
+  display: block;
+  text-align: center;
+  text-decoration: none;
   border: none;
   background: none;
-  min-width: 265px;
+  width: 265px;
   color: #fff;
   padding-top: 24px;
   padding-bottom: 23px;
@@ -11,6 +14,14 @@
   line-height: 21px;
   background: #0055B8;
   border-radius: 5px;
+
+  &--yellow{
+    background-color: #ffd600;
+    color: #272727;
+    width: 230px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+  }
 
   &:hover{
     opacity: 0.8;
