--- a/scss/blocks/_hero-section.scss
+++ b/scss/blocks/_hero-section.scss
@@ -152,11 +152,14 @@
     top: 10%;
     left: 0;
     p{
-      max-width: 333px;
+      max-width: 330px;
+      margin-right: auto;
       text-align: center;
     }
     h2{
-      max-width: 433px;
+      margin-right: auto;
+      font-size: 30px;
+      max-width: 330px;
       text-align: center;
     }
     .button{
