--- a/scss/blocks/_modern-section.scss
+++ b/scss/blocks/_modern-section.scss
@@ -39,7 +39,7 @@
     content: "";
     width: 275px;
     height: 150px;
-    background-image: url("../../img/logo-bg.svg");
+    background-image: url("../img/logo-bg.svg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
