--- a/scss/blocks/_appointment.scss
+++ b/scss/blocks/_appointment.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  width: 540px;
+  max-width: 540px;
   padding: 18px 33px;
   background-color: #0055b8;
   border-radius: 5px;
