--- a/scss/blocks/_review-section.scss
+++ b/scss/blocks/_review-section.scss
@@ -63,6 +63,7 @@
   list-style-type: none;
   flex-wrap: nowrap;
   flex-shrink: 0;
+  justify-content: space-between;
   width: 100%;
   overflow: hidden;
 }
@@ -71,10 +72,7 @@
   display: flex;
   flex-shrink: 0;
   flex-direction: column;
-  justify-content: center;
-  margin-right: 15px;
-  margin-left: 15px;
-
+  padding: 15px;
   img {
     order: -1;
   }
@@ -112,4 +110,13 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
+}
+
+@include breakpoint-down(900px){
+  .review-section__list{
+    justify-content: center;
+  }
+  .review-section__list-item:not(:first-child){
+    display: none;
+  }
 }
